--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ li a:hover:after {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100rem;
+  height: auto;
   font-size: 40px;
   flex-direction: column;
 }
@@ -152,36 +152,60 @@ li a:hover:after {
   border-radius: 40px;
 }
 
-.menu-list {
+.menu-upper-list {
   /* position: absolute; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-color: aliceblue; */
+  /* background-color: #59cb5e; */
   width: 350px;
-  height: 450px;
+  height: 400px;
   transform: translateY(-3rem);
 }
 
-hr{
+hr {
   width: 50%;
   height: 5px;
   background-color: #000000;
   border-radius: 5px;
-  margin-top: 10px;
+  margin: 10px;
   border: none;
 }
 
-
-.menu-list img {
+.menu-upper-list img {
   width: 300px;
   height: 300px;
-  
 }
 
-.upper-menu .column-upper-menu .menu-list:nth-child(2) {
-  
+.upper-menu .column-upper-menu:nth-child(2) img {
+  width: 400px;
+  height: 600px;
+}
+
+.upper-menu .column-upper-menu:nth-child(2) {
+  width: 400px; 
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #B18923;
+}
+
+.upper-menu .column-upper-menu:nth-child(3) {
+  background-color: #F493FD;
+}
+
+.grid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header-menu {
+  margin: 5rem 0;
+  font-size: 50px;
 }
 
 .grid-items {
@@ -191,11 +215,11 @@ hr{
 }
 
 .btn-menu {
-  width: 200px;
+  width: 300px;
   padding: 10px 20px;
   background-color: white;
   text-align: center;
-  border-radius: 42px;
+  border-radius: 40px;
   font-size: 30px;
   font-weight: bold;
   color: #59cb5e;
@@ -204,22 +228,46 @@ hr{
   transition: all 0.3s;
   text-decoration: none;
   border-width: 3px;
-  margin-top: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+
 .btn-menu:hover {
-  background-color: #fff;
+  background-color: #59cb5e;
   border-color: #59cb5e;
-  color: #59cb5e;
+  color: white;
 }
 
 .column-menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: 4rem 0;
 }
 
+.menu-list {
+  /* position: absolute; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #59cb5e;
+  border-radius: 40px;
+  width: 350px;
+  height: 400px;
+  transform: translateY(-3rem);
+}
+
+.menu-list img {
+  width: 300px;
+  height: 300px;
+  transform: translateY(-5rem);
+}
+.menu-list h3, hr, h4 {
+  transform: translateY(-2rem);
+  font-size: 25px;
+}
 /* menu end */
