--- a/style.css
+++ b/style.css
@@ -318,3 +318,47 @@ hr {
   font-size: 25px;
 }
 /* menu end */
+
+
+
+/* about */
+.content {
+  background-image: url(foto/green.png);
+  background-position: -650px 0px;
+  height: 50vh;
+}
+
+
+/* content */
+
+.about-content {
+  display: flex;
+}
+
+.about-content .poci {
+  margin-left: 10%;
+  margin-top: 12%;
+  border-radius: 50px;
+}
+
+.about-text {
+  margin: 5%;
+  margin-top: 16.5%;
+}
+
+.about-text h1 {
+  font-size: 2.5rem;
+}
+
+.about-text p {
+  font-size: 1rem;
+  margin-top: 2%;
+}
+
+.poci img {
+  height: 500px;
+  margin-left: 10%;
+  margin-top: -5%;
+  margin-left: -5%;
+}
+/* end about */
