--- a/style.css
+++ b/style.css
@@ -56,8 +56,19 @@ li a:hover:after {
   width: 100%;
 }
 
-.logo {
-  width: 100px;
+.logo{
+  width: 20px;
+  height: 30px;
+  padding-left: 10px;
+}
+
+.judul-logo{
+  font-size: 18px;
+  padding-left: 20px;
+}
+
+.logo-container{
+  display: flex;
 }
 /* navbar end */
 
