--- a/style.css
+++ b/style.css
@@ -178,6 +178,51 @@ li a:hover:after {
   100% { background-color: #000000;}
 }
 
+/* footer */
+.footer-container{
+  background-color: #1e1e1e;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.footer img{
+  padding: 5px;
+  background-color: #fff;
+  border-radius: 100px;
+  width: 40px;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  text-align: center;
+}
+
+.img-container{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer-judul{
+  text-align: center;
+}
+
+.footer-judul h3{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+
+.copyright{
+  font-size: 15px;
+  font-weight: 400;
+}
+/* footer end */
 /* home end */
 
 /* menu */
