--- a/style.css
+++ b/style.css
@@ -84,12 +84,11 @@ li a:hover:after {
   align-items: center;
   height: 100vh;
   font-size: 40px;
-  padding-left: 50px;
-  background-image: url(foto/background-home-01.png);
+  background-image: url(foto/background\ new.png);
   background-position: center; /* Adjust the background position here */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
-  background-size: 1800px; /* Ensure the background image covers the entire element */
-  background-position-x: -20rem;
+  background-size: 1540px; /* Ensure the background image covers the entire element */
+  background-position-x: 0rem;
 }
 
 .home-container h3 {
@@ -99,15 +98,45 @@ li a:hover:after {
 
 .home {
   /* background-image: url(foto/background-home-01.png); */
-  background-position: center; /* Adjust the background position here */
-  background-repeat: no-repeat; /* Prevent the background image from repeating */
-  background-size: 1600px; /* Ensure the background image covers the entire element */
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .foto-home {
-  padding-left: 250px;
-  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.75));
+  width: 100%;
+  padding-top: 450px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+}
+
+.foto-poci2{
+  margin-right: -250px;
+  margin-left: -250px;
+  width: 700px;
+  position: relative;
+}
+
+.foto-poci1 img{
+  padding-top: 100px;
+}
+
+.foto-poci3 img{
+  padding-top: 100px;
+}
+
+.judul-home{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: -230px;
+}
+
+.judul-home h1{
+  font-size: 70px;
+  font-weight: 700;
 }
 
 .btn-home {
@@ -182,8 +211,10 @@ li a:hover:after {
 .footer-container{
   background-color: #1e1e1e;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 20px;
+  position: relative;
+  gap: 100px;
 }
 
 .footer img{
@@ -222,10 +253,26 @@ li a:hover:after {
   font-size: 15px;
   font-weight: 400;
 }
+
+.kelompok{
+  color: #fff;
+  font-size: 13px;
+}
+
+.line{
+  padding: 1px 2px;
+  background-color: #fff;
+}
 /* footer end */
 /* home end */
 
 /* menu */
+.menu{
+  background-image: url(foto/background\ menu.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 .menu-container {
   display: flex;
   align-items: center;
@@ -386,12 +433,10 @@ hr {
 
 /* about */
 .content {
-  background-image: url(foto/green.png);
+  background-image: url(foto/background\ about.png);
   background-position: -650px 0px;
-  height: 50vh;
+  height: 50vh; 
 }
-
-
 /* content */
 
 .about-content {
@@ -433,8 +478,11 @@ hr {
 
 .contact {
   overflow-x: hidden;
-  background-image: url(foto/about\ background-01.png);
-  background-position: -480px 0px;
+  background-image: url(foto/background\ contact\ faq.png);
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 100vh;
 }
 
 .head {
@@ -522,21 +570,27 @@ hr {
 /* end contact */
 
 /* FAQ */
-
+.faq{
+  background-image: url(foto/background\ faq.png);
+  height: 100vh;
+  background-size: 100%;
+}
 .faq-container{
   display: flex;
 }
 
 .faq-container img{
   position: absolute;
-  width: 20rem;
-  margin-top: -50px;
+  width: 30rem;
+  margin-top: -100px;
 }
 
 .title {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 50px;
+  font-size: 40px;
 }
 
 .container-utama {
