--- a/style.css
+++ b/style.css
@@ -85,10 +85,9 @@ li a:hover:after {
   height: 100vh;
   font-size: 40px;
   background-image: url(foto/background\ new.png);
-  background-position: center; /* Adjust the background position here */
-  background-repeat: no-repeat; /* Prevent the background image from repeating */
-  background-size: 1540px; /* Ensure the background image covers the entire element */
-  background-position-x: 0rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 1640px;
 }
 
 .home-container h3 {
@@ -269,9 +268,10 @@ li a:hover:after {
 /* menu */
 .menu{
   background-image: url(foto/background\ menu.png);
-  background-position: center;
+  /* background-position: center; */
   background-repeat: no-repeat;
   background-size: 100%;
+  height: 100vh;
 }
 .menu-container {
   display: flex;
@@ -435,7 +435,7 @@ hr {
 .content {
   background-image: url(foto/background\ about.png);
   background-position: -650px 0px;
-  height: 50vh; 
+  height: 100vh; 
 }
 /* content */
 
@@ -478,8 +478,8 @@ hr {
 
 .contact {
   overflow-x: hidden;
-  background-image: url(foto/background\ contact\ faq.png);
-  background-position:center;
+  background-image: url(foto/background\ faq.png);
+  /* background-position: center; */
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100vh;
@@ -574,6 +574,7 @@ hr {
   background-image: url(foto/background\ faq.png);
   height: 100vh;
   background-size: 100%;
+  background-repeat: no-repeat;
 }
 .faq-container{
   display: flex;
